# autocrypto-lab

./: .gitignore  README.md  pyproject.toml
.omx/context/: cpu-friendly-autonomous-research-loop-20260601T070439Z.md  crypto-quant-research-pipeline-20260601T041514Z.md  public-futures-factor-autonomy-20260601T052843Z.md
.omx/plans/: prd-crypto-quant-research-pipeline.md  ralplan-cpu-friendly-autonomous-research-loop.md  ralplan-public-futures-factor-autonomy.md  test-spec-crypto-quant-research-pipeline.md
.omx/specs/: deep-interview-crypto-quant-research-pipeline.md
.omx/ultragoal/: brief.md  final-quality-gate.json  goals.json  ledger.jsonl
docs/: final-quality-gate.md
src/autocrypto_lab/: __init__.py  adapters.py  autonomous.py  backtest.py  cli.py  config.py  dashboard.py  data.py  etf.py  factors.py  ledger.py  manifest.py  models.py  pipeline.py  pit.py  regime.py  registry.py  report.py  safety.py  storage.py
tests/: test_adapters_storage.py  test_autonomous_loop.py  test_backtest_diagnostics.py  test_cli.py  test_config_registry_ledger.py  test_dashboard.py  test_data_validation.py  test_etf_registry.py  test_factor_dsl.py  test_factor_models.py  test_pit.py  test_public_binance_pipeline.py  test_regime_report.py  test_safety.py  test_walking_skeleton.py
tests/fixtures/: ohlcv_1h.csv
